--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,22 @@
 /*  your css code here. If applicable */
+.hero {
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	background-color: whitesmoke;
+}
+img {
+	width:60%;
+	height:90%;
+	object-fit:cover;
+}
+p,h1 {
+	text-align:center;
+}
+button{
+	padding:10px;
+	background-color:red;
+	color:white;
+	border-radius:10px;
+	margin-left:37%
+}
